Closed
Bug 1093863
Opened 11 years ago
Closed 11 years ago
Black screen Firefox on 33.0.2
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
People
(Reporter: jrmuizel, Assigned: bjacob)
References
Details
(Whiteboard: Solution: update your drivers (or, not recommended: disable OMTC, see comments #6 or #7))
Attachments
(1 file)
|
1.54 KB,
patch
|
bjacob
:
review+
jrmuizel
:
approval-mozilla-aurora+
jrmuizel
:
approval-mozilla-beta+
jrmuizel
:
approval-mozilla-release+
|
Details | Diff | Splinter Review |
This is to track information about the current black startup bugs.
Please add the make & model of the computer showing the issue along with a link to the crash report from about:crashes from running http://people.mozilla.org/~jmuizelaar/crash-firefox.exe
Also note whether the problem happened with 33.0.0 vs 33.0.2
Updated•11 years ago
|
status-firefox33:
--- → affected
status-firefox34:
--- → affected
status-firefox35:
--- → affected
status-firefox36:
--- → affected
Updated•11 years ago
|
tracking-firefox33:
--- → +
tracking-firefox34:
--- → +
tracking-firefox35:
--- → +
tracking-firefox36:
--- → +
Updated•11 years ago
|
Summary: Black firefox on 33.0.2 → Black screen Firefox on 33.0.2
Whiteboard: Solution: update your drivers (or, not recommended: disable OMTC, see comments #6 or #7)
33.0.2 crash report as requested by Jeff: https://crash-stats.mozilla.com/report/index/bp-d5c68c3d-1dc0-4bd5-b273-7b0e82141105
Intel/AMD dual graphics setup, Win 8.1 x64
Comment 2•11 years ago
|
||
Lenovo running Win 7 x86 with switchable graphics:
- Intel HD Graphics 4000 - driver v9.17.10.3114
- AMD Radeon HD 8570M - driver v12.100.14.0
Black window displays for both 33.0.0 and 33.0.2:
- Firefox 33.0 - https://crash-stats.mozilla.com/report/index/ed954f28-3913-4c79-823d-b22d02141105
- Firefox 33.0.2 - https://crash-stats.mozilla.com/report/index/6aaf9980-905e-49cc-ae77-68aa72141105
Running https://tbpl.mozilla.org/?tree=Try&rev=294561e67f20 debug build with "firefox.exe | more" gives just a couple of warnings related to some missing add-on but nothing else. Also note that I get NO black window with this build. Graphics info from this build:
Adapter Description Intel(R) HD Graphics 4000
Adapter Drivers igdumd32 igd10umd32 igd10umd32
Adapter RAM Unknown
Device ID 0x0166
DirectWrite Enabled false (6.2.9200.16492)
Driver Date 4-17-2013
Driver Version 9.17.10.3114
GPU #2 Active false
GPU Accelerated Windows 1/1 Direct3D 9 (OMTC)
Vendor ID 0x8086
WebGL Renderer Google Inc. -- ANGLE (Intel(R) HD Graphics 4000 Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote true
AzureCanvasBackend skia
AzureContentBackend cairo
AzureFallbackCanvasBackend cairo
AzureSkiaAccelerated 0
Comment 3•11 years ago
|
||
(In reply to Florin Mezei, QA (:FlorinMezei) from comment #2)
> Lenovo running Win 7 x86 with switchable graphics:
> - Intel HD Graphics 4000 - driver v9.17.10.3114
> - AMD Radeon HD 8570M - driver v12.100.14.0
>
> Black window displays for both 33.0.0 and 33.0.2:
> - Firefox 33.0 -
> https://crash-stats.mozilla.com/report/index/ed954f28-3913-4c79-823d-
> b22d02141105
> - Firefox 33.0.2 -
> https://crash-stats.mozilla.com/report/index/6aaf9980-905e-49cc-ae77-
> 68aa72141105
>
> Running https://tbpl.mozilla.org/?tree=Try&rev=294561e67f20 debug build with
> "firefox.exe | more" gives just a couple of warnings related to some missing
> add-on but nothing else. Also note that I get NO black window with this
> build. Graphics info from this build:
> Adapter Description Intel(R) HD Graphics 4000
> Adapter Drivers igdumd32 igd10umd32 igd10umd32
> Adapter RAM Unknown
> Device ID 0x0166
> DirectWrite Enabled false (6.2.9200.16492)
> Driver Date 4-17-2013
> Driver Version 9.17.10.3114
> GPU #2 Active false
> GPU Accelerated Windows 1/1 Direct3D 9 (OMTC)
> Vendor ID 0x8086
> WebGL Renderer Google Inc. -- ANGLE (Intel(R) HD Graphics 4000 Direct3D9Ex
> vs_3_0 ps_3_0)
> windowLayerManagerRemote true
> AzureCanvasBackend skia
> AzureContentBackend cairo
> AzureFallbackCanvasBackend cairo
> AzureSkiaAccelerated 0
The newest Intel VGA driver for HD4000 is 10.18.10.3958 from 9/30/2014. Could you update to that version and try again with 33.0 & 33.0.2? If you still get black screen, can you try using AMD's Autodetect Tool from bug 1083071 comment 194?
| Reporter | ||
Comment 4•11 years ago
|
||
(In reply to Florin Mezei, QA (:FlorinMezei) from comment #2)
> Lenovo running Win 7 x86 with switchable graphics:
What's the model number for this computer?
Flags: needinfo?(florin.mezei)
Comment 5•11 years ago
|
||
(In reply to Florin Mezei, QA (:FlorinMezei) from comment #2)
> Lenovo running Win 7 x86 with switchable graphics:
> - Intel HD Graphics 4000 - driver v9.17.10.3114
> - AMD Radeon HD 8570M - driver v12.100.14.0
>
> Black window displays for both 33.0.0 and 33.0.2:
> - Firefox 33.0 -
> https://crash-stats.mozilla.com/report/index/ed954f28-3913-4c79-823d-
> b22d02141105
> - Firefox 33.0.2 -
> https://crash-stats.mozilla.com/report/index/6aaf9980-905e-49cc-ae77-
> 68aa72141105
>
> Running https://tbpl.mozilla.org/?tree=Try&rev=294561e67f20 debug build with
> "firefox.exe | more" gives just a couple of warnings related to some missing
> add-on but nothing else. Also note that I get NO black window with this
> build. Graphics info from this build:
> Adapter Description Intel(R) HD Graphics 4000
> Adapter Drivers igdumd32 igd10umd32 igd10umd32
> Adapter RAM Unknown
> Device ID 0x0166
> DirectWrite Enabled false (6.2.9200.16492)
> Driver Date 4-17-2013
> Driver Version 9.17.10.3114
> GPU #2 Active false
> GPU Accelerated Windows 1/1 Direct3D 9 (OMTC)
> Vendor ID 0x8086
> WebGL Renderer Google Inc. -- ANGLE (Intel(R) HD Graphics 4000 Direct3D9Ex
> vs_3_0 ps_3_0)
> windowLayerManagerRemote true
> AzureCanvasBackend skia
> AzureContentBackend cairo
> AzureFallbackCanvasBackend cairo
> AzureSkiaAccelerated 0
Sorry, here's a direct link: https://downloadcenter.intel.com/Detail_Desc.aspx?DwnldID=24346&lang=eng&ProdId=3711
| Assignee | ||
Comment 6•11 years ago
|
||
Attachment #8517755 -
Flags: review+
| Reporter | ||
Comment 7•11 years ago
|
||
Comment on attachment 8517755 [details] [diff] [review]
Blacklist D3D on dual Intel/AMD not advertised as such in the registry - r=jrmuizel
I got approval for this from Lawrence in person.
Attachment #8517755 -
Flags: approval-mozilla-release+
Attachment #8517755 -
Flags: approval-mozilla-beta+
Attachment #8517755 -
Flags: approval-mozilla-aurora+
| Assignee | ||
Comment 8•11 years ago
|
||
Updated•11 years ago
|
Assignee: nobody → bjacob
(In reply to Wes Kocher (:KWierso) from comment #9)
> https://hg.mozilla.org/integration/mozilla-inbound/rev/fb1bee089925
I'll keep an eye on this and will inform Ryan when it is green enough to uplift.
Comment 11•11 years ago
|
||
Comment 12•11 years ago
|
||
| Reporter | ||
Comment 13•11 years ago
|
||
Anyone who's experiencing this bug please give the following build a try.
http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-release-win32-debug/1415235767/
It should black list this situation and firefox should work. We're still going to try to figure out what's going wrong so that we can fix this properly.
Comment 14•11 years ago
|
||
Also landed on GECKO330_2014101104_RELBRANCH for 33.0.3:
https://hg.mozilla.org/releases/mozilla-release/rev/983a710b51c4
Comment 15•11 years ago
|
||
(In reply to Jeff Muizelaar [:jrmuizel] from comment #13)
> Anyone who's experiencing this bug please give the following build a try.
> http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-
> release-win32-debug/1415235767/
>
> It should black list this situation and firefox should work. We're still
> going to try to figure out what's going wrong so that we can fix this
> properly.
Verified on Lenovo G500 i7 running Win 7 x86 with switchable graphics:
- Intel HD Graphics 4000 - driver v9.17.10.3114
- AMD Radeon HD 8570M - driver v12.100.14.0
Firefox 33.0.3 build 2 (BuildID=20141105223254) starts correctly and no longer shows the black window.
Graphics information from about:support:
Adapter Description Intel(R) HD Graphics 4000
Adapter Drivers igdumd32 igd10umd32 igd10umd32
Adapter RAM Unknown
Device ID 0x0166
DirectWrite Enabled false (6.2.9200.16492)
Driver Date 4-17-2013
Driver Version 9.17.10.3114
GPU #2 Active false
GPU Accelerated Windows 0/1 Basic (OMTC)
Vendor ID 0x8086
WebGL Renderer Google Inc. -- ANGLE (Intel(R) HD Graphics 4000 Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote true
AzureCanvasBackend skia
AzureContentBackend cairo
AzureFallbackCanvasBackend cairo
AzureSkiaAccelerated 0
The try build from http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-release-win32-debug/1415235767/ does not start at all. Here's what I get when trying to start it:
pldhash: for the aTable at address 0090EA04, the given aEntrySize of 112 definitely favors chaining over double hashing.
[4652] WARNING: XPCOM objects created/destroyed from static ctor/dtor: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/xpcom/base/nsTraceRefcnt.cpp, line 145
[4652] WARNING: XPCOM objects created/destroyed from static ctor/dtor: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/xpcom/base/nsTraceRefcnt.cpp, line 145
[4652] WARNING: XPCOM objects created/destroyed from static ctor/dtor: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/xpcom/base/nsTraceRefcnt.cpp, line 145
System JS : WARNING resource://gre/modules/Preferences.jsm:378 - mutating the [[Prototype]] of an object will cause your code to run very slowly; instead create the object with the correct initial [[Prototype]] value using Object.create
[4652] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/xpcom/base/nsSystemInfo.cpp, line 65
[4652] WARNING: Last startup was detected as a crash.: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/toolkit/components/startup/nsAppStartup.cpp, line 887
1415276823512 addons.xpi WARN Ignoring missing add-on in C:\Users\Diana\AppData\Roaming\Mozilla\Firefox\Profiles\w7xi561s.default\extensions\faststartff@gmail.com
1415276823519 addons.xpi WARN Ignoring missing add-on in C:\Users\Diana\AppData\Roaming\Mozilla\Firefox\Profiles\w7xi561s.default\extensions\shortcutff@gmail.com
[4652] WARNING: This method is lossy. Use GetCanonicalPath !: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/xpcom/io/nsLocalFileWin.cpp, line 3444
++DOCSHELL 077A4400 == 1 [pid = 4652] [id = 1]
++DOMWINDOW == 1 (077A4800) [pid = 4652] [serial = 1] [outer = 00000000]
++DOMWINDOW == 2 (077A5000) [pid = 4652] [serial = 2] [outer = 077A4800]
pldhash: for the aTable at address 07280F50, the given aEntrySize of 72 definitely favors chaining over double hashing.
[4652] WARNING: getting z level of unregistered window: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/xpfe/appshell/src/nsWindowMediator.cpp, line 591
[4652] WARNING: getting z level of unregistered window: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/xpfe/appshell/src/nsWindowMediator.cpp, line 591
[4652] WARNING: getting z level of unregistered window: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/xpfe/appshell/src/nsWindowMediator.cpp, line 591
[4652] WARNING: getting z level of unregistered window: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/xpfe/appshell/src/nsWindowMediator.cpp, line 591
++DOCSHELL 081BF800 == 2 [pid = 4652] [id = 2]
++DOMWINDOW == 3 (081BFC00) [pid = 4652] [serial = 3] [outer = 00000000]
++DOMWINDOW == 4 (081C0400) [pid = 4652] [serial = 4] [outer = 081BFC00]
++DOMWINDOW == 5 (08212C00) [pid = 4652] [serial = 5] [outer = 077A4800]
++DOCSHELL 0C1B4400 == 3 [pid = 4652] [id = 3]
++DOMWINDOW == 6 (0C1B5000) [pid = 4652] [serial = 6] [outer = 00000000]
++DOCSHELL 0C1B5C00 == 4 [pid = 4652] [id = 4]
++DOMWINDOW == 7 (0BD81200) [pid = 4652] [serial = 7] [outer = 00000000]
[4652] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/content/base/src/nsFrameLoader.cpp, line 400
++DOCSHELL 0CE6E400 == 5 [pid = 4652] [id = 5]
++DOMWINDOW == 8 (0CBE4200) [pid = 4652] [serial = 8] [outer = 00000000]
[4652] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/content/base/src/nsFrameLoader.cpp, line 400
++DOMWINDOW == 9 (0CFB9600) [pid = 4652] [serial = 9] [outer = 0CBE4200]
[4652] WARNING: NS_ENSURE_TRUE(nsContentUtils::GetCurrentJSContext()) failed: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/docshell/base/nsDocShell.cpp, line 8752
[4652] WARNING: NS_ENSURE_TRUE(globalObject && globalObject->GetGlobalJSObject()) failed: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/content/html/document/src/nsHTMLContentSink.cpp, line 742
[4652] WARNING: Subdocument container has no frame: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/layout/base/nsDocumentViewer.cpp, line 2522
++DOMWINDOW == 10 (0CEA1800) [pid = 4652] [serial = 10] [outer = 0C1B5000]
[4652] WARNING: NS_ENSURE_TRUE(globalObject && globalObject->GetGlobalJSObject()) failed: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/content/html/document/src/nsHTMLContentSink.cpp, line 742
[4652] WARNING: Subdocument container has no frame: file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/layout/base/nsDocumentViewer.cpp, line 2522
++DOMWINDOW == 11 (0CFC0E00) [pid = 4652] [serial = 11] [outer = 0BD81200]
++DOMWINDOW == 12 (0D3C4000) [pid = 4652] [serial = 12] [outer = 0CBE4200]
[4652] ###!!! ASSERTION: Can't use Direct3D 11 because of a driver bug: 'Error', file c:/builds/moz2_slave/m-rel-w32-d-000000000000000000/build/widget/windows/nsWindow.cpp, line 6754
Flags: needinfo?(florin.mezei)
Comment 16•11 years ago
|
||
Great news, congratulations to the gfx team!
Comment 17•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
Comment 18•11 years ago
|
||
(In reply to Jeff Muizelaar [:jrmuizel] from comment #7)
> Comment on attachment 8517755 [details] [diff] [review]
> Blacklist D3D on dual Intel/AMD not advertised as such in the registry -
> r=jrmuizel
>
> I got approval for this from Lawrence in person.
My Firefox 33.03 just got D3D blacklisted, and I now see tearing which I didn't have with FX32.02 or earlier.
While I have dual GPU (Intel i7-4500u + integrated HD4400 and discrete AMD 8850m, win 8.1-64) Firefox was and is running on the Intel iGPU. FWIW, I never experienced the black window bug.
Was it the goal of this patch to disable D3D on such systems, even if Firefox was and is running on the Intel iGPU?
Can this be overridden using prefs?
Comment 19•11 years ago
|
||
Bug stil present with OMTC disabled
https://bugzilla.mozilla.org/show_bug.cgi?id=1090046#c13
Comment 20•11 years ago
|
||
(In reply to Atharvan from comment #19)
> Bug stil present with OMTC disabled
>
> https://bugzilla.mozilla.org/show_bug.cgi?id=1090046#c13
What build is that Atharvan?
Flags: needinfo?(Atharvan)
Comment 21•11 years ago
|
||
(In reply to Avi Halachmi (:avih) from comment #18)
> While I have dual GPU (Intel i7-4500u + integrated HD4400 and discrete AMD
> 8850m, win 8.1-64) Firefox was and is running on the Intel iGPU. FWIW, I
> never experienced the black window bug.
>
> Was it the goal of this patch to disable D3D on such systems, even if
> Firefox was and is running on the Intel iGPU?
It's a long-standing Firefox-bug, where HWA gets disabled even if only the unused GPU is blacklisted: bug 628129
> Can this be overridden using prefs?
gfx.direct2d.force-enabled;true
Comment 22•11 years ago
|
||
(In reply to Avi Halachmi (:avih) from comment #18)
> (In reply to Jeff Muizelaar [:jrmuizel] from comment #7)
> > Comment on attachment 8517755 [details] [diff] [review]
> > Blacklist D3D on dual Intel/AMD not advertised as such in the registry -
> > r=jrmuizel
> >
> > I got approval for this from Lawrence in person.
>
> My Firefox 33.03 just got D3D blacklisted, and I now see tearing which I
> didn't have with FX32.02 or earlier.
>
> While I have dual GPU (Intel i7-4500u + integrated HD4400 and discrete AMD
> 8850m, win 8.1-64) Firefox was and is running on the Intel iGPU. FWIW, I
> never experienced the black window bug.
>
> Was it the goal of this patch to disable D3D on such systems, even if
> Firefox was and is running on the Intel iGPU?
>
> Can this be overridden using prefs?
Can you post the Graphics section from about:support?
Comment 23•11 years ago
|
||
(In reply to Atharvan from comment #19)
> Bug stil present with OMTC disabled
>
> https://bugzilla.mozilla.org/show_bug.cgi?id=1090046#c13
Can you post the Graphics section from about:support?
Comment 24•11 years ago
|
||
Graphics
Adapter Description Intel(R) HD Graphics
Adapter Drivers igdumd32 igd10umd32 igd10umd32
Adapter RAM Unknown
Device ID 0x0102
Direct2D Enabled true
DirectWrite Enabled true (6.2.9200.16571)
Driver Date 3-20-2014
Driver Version 9.17.10.3517
GPU #2 Active false
GPU Accelerated Windows 1/1 Direct3D 10
Vendor ID 0x8086
WebGL Renderer Google Inc. -- ANGLE (Intel(R) HD Graphics Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote false
AzureCanvasBackend direct2d
AzureContentBackend direct2d
AzureFallbackCanvasBackend cairo
AzureSkiaAccelerated 0
Flags: needinfo?(Atharvan)
Comment 25•11 years ago
|
||
(In reply to Atharvan from comment #24)
> Graphics
> Adapter Description Intel(R) HD Graphics
> Adapter Drivers igdumd32 igd10umd32 igd10umd32
> Adapter RAM Unknown
> Device ID 0x0102
> Direct2D Enabled true
> DirectWrite Enabled true (6.2.9200.16571)
> Driver Date 3-20-2014
> Driver Version 9.17.10.3517
> GPU #2 Active false
> GPU Accelerated Windows 1/1 Direct3D 10
> Vendor ID 0x8086
> WebGL Renderer Google Inc. -- ANGLE (Intel(R) HD Graphics Direct3D9Ex vs_3_0
> ps_3_0)
> windowLayerManagerRemote false
> AzureCanvasBackend direct2d
> AzureContentBackend direct2d
> AzureFallbackCanvasBackend cairo
> AzureSkiaAccelerated 0
Thanks for this info. Well your driver is as current as can be. With OMTC = true it's still black as well?
Comment 26•11 years ago
|
||
(In reply to Florin Mezei, QA (:FlorinMezei) from comment #20)
> (In reply to Atharvan from comment #19)
> > Bug stil present with OMTC disabled
> >
> > https://bugzilla.mozilla.org/show_bug.cgi?id=1090046#c13
>
> What build is that Atharvan?
On that time its firefox 33.0.2 and Graphics section
Graphics
Adapter Description Intel(R) HD Graphics
Adapter Drivers igdumd32 igd10umd32 igd10umd32
Adapter RAM Unknown
Device ID 0x0102
Direct2D Enabled true
DirectWrite Enabled true (6.2.9200.16571)
Driver Date 3-20-2014
Driver Version 9.17.10.3517
GPU #2 Active false
GPU Accelerated Windows 1/1 Direct3D 10
Vendor ID 0x8086
WebGL Renderer Google Inc. -- ANGLE (Intel(R) HD Graphics Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote false
AzureCanvasBackend direct2d
AzureContentBackend direct2d
AzureFallbackCanvasBackend cairo
AzureSkiaAccelerated 0
Comment 27•11 years ago
|
||
(In reply to Elbart from comment #21)
> ...
> > Can this be overridden using prefs?
>
> gfx.direct2d.force-enabled;true
I don't think this works. First, it appears to be disabling D3D/window-acceleration rather D2D, and second, the exception at the patch _seems_ hard-coded. But maybe the override happens outside of the patch which landed at this bug. Still, I tried it and it didn't revert the behavior to that of Firefox 33.02, and neither did setting layers.acceleration.force-enabled to true.
about:support graphics section with Nightly 2014-11-06 (before the patch at this bug reached nightly) - I didn't experience the black window bug and OMTC performs nicely:
Adapter Description Intel(R) HD Graphics Family
Adapter Drivers igdumdim64 igd10iumd64 igd10iumd64 igdumdim32 igd10iumd32 igd10iumd32
Adapter RAM Unknown
ClearType Parameters D [ Gamma: 2200 Pixel Structure: B ClearType Level: 100 Enhanced Contrast: 100 ] D [ Gamma: 2200 Pixel Structure: B ClearType Level: 100 Enhanced Contrast: 100 ] D [ Gamma: 2200 Pixel Structure: B ClearType Level: 100 Enhanced Contrast: 50 ]
Device ID 0x0a16
Direct2D Enabled true
DirectWrite Enabled true (6.3.9600.17111)
Driver Date 5-17-2014
Driver Version 10.18.10.3621
GPU #2 Active false
GPU Accelerated Windows 1/1 Direct3D 11 (OMTC)
Subsys ID 05eb1028
Vendor ID 0x8086
WebGL Renderer Google Inc. -- ANGLE (Intel(R) HD Graphics Family Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote true
AzureCanvasBackend direct2d
AzureContentBackend direct2d 1.1
AzureFallbackCanvasBackend cairo
AzureSkiaAccelerated 0
about:support at Firefox 33.03 (I didn't experience the black window bug with 33.02, and did enjoy the scrolling performance very much):
Adapter Description Intel(R) HD Graphics Family
Adapter Drivers igdumdim64 igd10iumd64 igd10iumd64 igdumdim32 igd10iumd32 igd10iumd32
Adapter RAM Unknown
ClearType Parameters D [ Gamma: 2200 Pixel Structure: B ClearType Level: 100 Enhanced Contrast: 100 ] D [ Gamma: 2200 Pixel Structure: B ClearType Level: 100 Enhanced Contrast: 100 ] D [ Gamma: 2200 Pixel Structure: B ClearType Level: 100 Enhanced Contrast: 50 ]
Device ID 0x0a16
DirectWrite Enabled false (6.3.9600.17111)
Driver Date 5-17-2014
Driver Version 10.18.10.3621
GPU #2 Active false
GPU Accelerated Windows 0/1 Basic (OMTC)
Vendor ID 0x8086
WebGL Renderer Google Inc. -- ANGLE (Intel(R) HD Graphics Family Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote true
AzureCanvasBackend skia
AzureContentBackend cairo
AzureFallbackCanvasBackend cairo
AzureSkiaAccelerated 0
The difference in behavior for me from 33.02 to 33.03:
- Visible tearing.
- Noticeable degradation of scroll performance (less smooth and less consistent intervals).
Comment 28•11 years ago
|
||
Also, for comment 27, the AMD driver is the official/reference AMD Mobility Catalyst 14.4 from AMD, and for Intel it's 10.18.10.3621 official driver from Intel.
Both the Intel driver and the AMD driver are not the latest because the laptop HW vendor (Dell) supplied drivers are about 18 months old and official/reference driver from the GPU manufacturer don't always work well.
So official AMD mobility 14.4 and official Intel 3621 for Haswell are the currently the latest combo which works well on my HW.
Comment 29•11 years ago
|
||
can we enable GPU accleration again? The UI looks ugly as hell in 34b7. I'm no back to 34b6 and everything is fine. I have NO crashes or other issues.
I use Intel HD driver 10.18.10.3958 which is the latest version from Intel and the AMD is 14.4, because AMD dropped the support of Windows 8 (Build 9200) after 14.4. And I never use the AMD chip of my laptop. The Intel HD is fast enough.
Comment 30•11 years ago
|
||
ok, I have a small black part when the addon "extended statusbar" (https://addons.mozilla.org/en-US/firefox/addon/extended-statusbar/) disappears:
https://dl.dropboxusercontent.com/u/5749744/Bilder/Firefox/black_part_statusbar.png
Here are the info from 34b6:
Grafik
Direct2D aktiviert true
DirectWrite aktiviert true (6.2.9200.16581)
Geräte-ID 0x0166
GPU #2 aktiv false
GPU-beschleunigte Fenster 1/1 Direct3D 11 (OMTC)
Karten-Beschreibung Intel(R) HD Graphics 4000
Karten-RAM Unknown
Karten-Treiber igdumdim64 igd10iumd64 igd10iumd64 igdumdim32 igd10iumd32 igd10iumd32
Subsys-ID 05721028
Treiber-Datum 9-30-2014
Treiber-Version 10.18.10.3958
Vendor-ID 0x8086
WebGL-Renderer Google Inc. -- ANGLE (Intel(R) HD Graphics 4000 Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote true
AzureCanvasBackend direct2d
AzureContentBackend direct2d
AzureFallbackCanvasBackend cairo
AzureSkiaAccelerated 0
You need to log in
before you can comment on or make changes to this bug.
Description
•